# rust-clean-architecure

./: .env  Cargo.toml  README.md  diesel.toml
migrations/2025-01-02-085527_create_users/: up.sql
src/: main.rs
src/common/: response.rs
src/domain/: mod.rs
src/domain/entities/: mod.rs  user_entity.rs
src/domain/repositories/: mod.rs  user_repository.rs  user_repository_impl.rs
src/domain/usecases/: user_usecase.rs
src/infrastructure/database/: db.rs  mod.rs
src/infrastructure/repositories/: user_repository_impl.rs
src/shared/controllers/: health_controller.rs  user_controller.rs
src/shared/dto/: user_dto.rs
