[package]
name = "rust-architecture"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.83"
chrono = "0.4"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres"] }
dotenvy = "0.15"
